updated task1 style.css

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Document</title>
 </head>
 <body>
+    <h3>DOM Projects</h3>
     <a href="./Task1-NumberCounter/index.html">Task 1 - Number Counter</a>
+    
 </body>
 </html>
