--- a/Task2/index.html
+++ b/Task2/index.html
@@ -8,7 +8,15 @@
 </head>
 <body>
     
+<div id="box">
+    <h2>Team: </h2>
+    <p>Captain: </p>
+    <p>Vice Captain: </p>
+    <p>Top Batsman: </p>
+    <p>Top Bowler: </p>
+</div>
 
+<button>change</button>
     <script src="script.js"></script>
 </body>
 </html>
