--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 <body>
     <h3>DOM Projects</h3>
     <a href="./Task1-NumberCounter/index.html">Task 1 - Number Counter</a>
+    <br>
+    <a href="./Task2/index.html">Task 2 - Changing Box Color</a>
+    <br>
     
 </body>
 </html>
